Run dnsmasq as the dnsmasq user
There is a task that checks whether the dnsmasq user exists.
However, dnsmasq is configured to run as user "nobody" instead.
This change lets dnsmasq run as user "dnsmasq".

--- a/roles/dns_adblocking/templates/dnsmasq.conf.j2
+++ b/roles/dns_adblocking/templates/dnsmasq.conf.j2
@@ -103,7 +103,7 @@ server={{ host }}
 
 # If you want dnsmasq to change uid and gid to something other
 # than the default, edit the following lines.
-user=nobody
+user=dnsmasq
 group=nogroup
 
 # If you want dnsmasq to listen for DHCP and DNS requests only on
